@@ -22,10 +22,12 @@
 - added: modificators can handle `INSTALL('view', ...)`
 - added: `String.isPhone()` for phone number validation
 - added: `String.isUID()` for UID() validation
+- added: `String.isZIP()`
 - added: `String.toCamelCase()`
 - added: new schemabuilder types `Email` (string, maxlength 120), `Phone` (string, maxlength 20), `Zip` (string, maxlength 10), `Camelize` (string), `Lowerize` (string), `Upperize` (string), `UID` (string, minlength 18, maxlength 20) and `Url` (string, maxlength 500)
 - added: `Pagination.html(max, format)` returns `String`
 - added: `Pagination.json(max, format)` returns `String`
+- added: `SchemaBuilderEntity.fields` and it contains all field names in array.
 
 - updated: subdomain routing supports wildcard routing `F.route('[*]/', 'homepage')` (`F.websocket()` is supported too)
 - updated: `F.route(url, ...)` - `url`can be String Array with multiple relative paths by @Harry-Stot
